--- a/src/com/outtatech/client/MainGameScreen.form
+++ b/src/com/outtatech/client/MainGameScreen.form
@@ -65,30 +65,30 @@
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="jCheckBox1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox3" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox4" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox5" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox6" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox7" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox8" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox9" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox10" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox11" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox12" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox4" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox5" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="suspectBox6" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox4" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox5" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="vehicleBox6" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                               <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="jCheckBox21" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox20" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox18" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox17" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox16" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox15" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox14" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox13" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jCheckBox19" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox9" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox8" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox6" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox5" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox4" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox3" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox2" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox1" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="locationBox7" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
@@ -191,54 +191,54 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox13" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox14" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox3" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox15" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox3" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox4" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox16" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox5" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox17" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox6" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox18" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="suspectBox6" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCheckBox19" min="-2" max="-2" attributes="0"/>
+                      <Component id="locationBox7" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox20" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="vehicleBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox8" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBox8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBox21" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="vehicleBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="locationBox9" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCheckBox9" min="-2" max="-2" attributes="0"/>
+                      <Component id="vehicleBox3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCheckBox10" min="-2" max="-2" attributes="0"/>
+                      <Component id="vehicleBox4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCheckBox11" min="-2" max="-2" attributes="0"/>
+                      <Component id="vehicleBox5" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCheckBox12" min="-2" max="-2" attributes="0"/>
+                      <Component id="vehicleBox6" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" alignment="1" min="-2" pref="325" max="-2" attributes="0"/>
               </Group>
@@ -348,107 +348,107 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox1">
+    <Component class="javax.swing.JCheckBox" name="suspectBox1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox2">
+    <Component class="javax.swing.JCheckBox" name="suspectBox2">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect2"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox3">
+    <Component class="javax.swing.JCheckBox" name="suspectBox3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect3"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox4">
+    <Component class="javax.swing.JCheckBox" name="suspectBox4">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect4"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox5">
+    <Component class="javax.swing.JCheckBox" name="suspectBox5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect5"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox6">
+    <Component class="javax.swing.JCheckBox" name="suspectBox6">
       <Properties>
         <Property name="text" type="java.lang.String" value="Suspect6"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox7">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox8">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox2">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle2"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox9">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle3"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox10">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox4">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle4"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox11">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle5"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox12">
+    <Component class="javax.swing.JCheckBox" name="vehicleBox6">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vehicle6"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox13">
+    <Component class="javax.swing.JCheckBox" name="locationBox1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox14">
+    <Component class="javax.swing.JCheckBox" name="locationBox2">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location2"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox15">
+    <Component class="javax.swing.JCheckBox" name="locationBox3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location3"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox16">
+    <Component class="javax.swing.JCheckBox" name="locationBox4">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location4"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox17">
+    <Component class="javax.swing.JCheckBox" name="locationBox5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location5"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox18">
+    <Component class="javax.swing.JCheckBox" name="locationBox6">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location6"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox19">
+    <Component class="javax.swing.JCheckBox" name="locationBox7">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location7"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox20">
+    <Component class="javax.swing.JCheckBox" name="locationBox8">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location8"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox21">
+    <Component class="javax.swing.JCheckBox" name="locationBox9">
       <Properties>
         <Property name="text" type="java.lang.String" value="Location9"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
